--- a/src/component/productPage/productStyle.scss
+++ b/src/component/productPage/productStyle.scss
@@ -1,12 +1,12 @@
 @import "../../style.scss";
 
-.aboutProduct {
-  @include display-prop(center, center, column);
+.productWelcomePage {
+  @include flexProp(center, center, column);
   height: 88vh;
   line-height: 2.5rem;
   background: rgb(248, 248, 248);
 
-  div {
+  .content {
     width: auto !important;
     text-align: center;
 
@@ -30,6 +30,7 @@
       }
     }
   }
+
   p {
     width: 36%;
     min-width: 193px;
@@ -37,22 +38,19 @@
     margin: 13px;
     text-align: center;
   }
+
   button {
     width: 127px;
     margin: 22px;
   }
 }
 
-.key_feature {
-  background-color: white;
-}
-
 @media (max-width: 480px) {
-  .aboutProduct {
+  .productWelcomePage {
     height: auto;
     justify-content: space-evenly !important;
 
-    div {
+    .content {
       height: 33vh;
     }
   }
