--- a/src/component/blogPage/stylesheet/pagination.scss
+++ b/src/component/blogPage/stylesheet/pagination.scss
@@ -1,50 +1,14 @@
 @import "../../../style.scss";
-[type="button"] {
-  @include contentSize(42px, 92px);
-  @include fontProp(0.78em, bold);
-  background-color: $brandColor;
-  color: white;
-  border-radius: 5px;
-  border: 0;
-  padding: 6px;
-  box-sizing: border-box;
 
-  &:active {
-    transform: scale(0.93);
-  }
-}
-p {
-  color: rgb(139, 139, 139);
-}
-
-.pagination_blog {
+.pagination {
   @include contentSize(21vh, 100%);
-  @include display-prop(center, center, row);
+  @include flexProp(center, center, row);
   box-sizing: border-box;
   text-align: center;
 
-  .previous_nav,
-  .next_nav {
-    width: 8vw;
-    min-width: 52px;
-    background: rgb(234, 234, 234);
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  .previous_nav {
-    border-right: 1px solid black;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  .next_nav {
-    border-left: 1px solid black;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-
   ul {
     @include contentSize(50%, 40vw);
-    @include display-prop(center, center, row);
+    @include flexProp(center, center, row);
     min-width: 267px;
     box-sizing: border-box;
     border: 1px solid;
@@ -52,13 +16,32 @@ p {
     box-shadow: 2px 2px 6px rgb(212, 212, 212);
 
     li {
-      @include display-prop(center, center, row);
       @include contentSize(100%, 5vw);
+      @include flexProp(center, center, row);
       min-width: 32px;
       color: $brandColor;
       list-style: none;
       box-sizing: border-box;
       cursor: pointer;
+    }
+
+    .previousNav,
+    .nextNav {
+      width: 8vw;
+      min-width: 52px;
+      background: rgb(234, 234, 234);
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    .previousNav {
+      border-right: 1px solid black;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    .nextNav {
+      border-left: 1px solid black;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 }
