--- a/src/component/commonComponent/stylesheet/footer.scss
+++ b/src/component/commonComponent/stylesheet/footer.scss
@@ -1,7 +1,7 @@
 @import "../../../style.scss";
 
 footer {
-  @include display-prop(space-around, center, row);
+  @include flexProp(space-around, center, row);
   @include contentSize(74px, 100%);
   border-top: 1px solid rgb(193, 193, 193);
 
