--- a/src/component/contactPage/stylesheet/aboutContact.scss
+++ b/src/component/contactPage/stylesheet/aboutContact.scss
@@ -1,13 +1,12 @@
 @import "../../../style.scss";
 
-.aboutContact {
-  @include display-prop(center, center, column);
-  height: 88vh;
+.contactWelcomePage {
+  @include flexProp(center, center, column);
+  height: 84vh;
   line-height: 2.5rem;
   background: rgb(248, 248, 248);
 
-  div {
-    width: 210px;
+  .contentOfContact {
     text-align: center;
 
     h3 {
@@ -15,7 +14,7 @@
       color: rgb(120, 120, 120);
     }
     h1 {
-      height: 95px;
+      height: 65px;
       font-weight: 800;
 
       span {
@@ -38,7 +37,12 @@
   }
 }
 @media (max-width: 480px) {
-  .aboutContact {
-    height: 47vh;
+  .contactWelcomePage {
+    .contentOfContact {
+      width: 223px;
+      h1 {
+        height: 21vh !important;
+      }
+    }
   }
 }
