--- a/src/component/pricingPage/stylesheet/aboutPrice.scss
+++ b/src/component/pricingPage/stylesheet/aboutPrice.scss
@@ -1,7 +1,7 @@
 @import "../../../style.scss";
 
 .aboutPrice {
-  @include display-prop(center, center, column);
+  @include flexProp(center, center, column);
   height: 88vh;
   line-height: 2.5rem;
   background: rgb(248, 248, 248);
