--- a/src/component/pricingPage/stylesheet/publicReview.scss
+++ b/src/component/pricingPage/stylesheet/publicReview.scss
@@ -1,7 +1,7 @@
 @import "../../../style.scss";
 
 .public_opinion {
-  @include display-prop(space-evenly, center, column);
+  @include flexProp(space-evenly, center, column);
   @include contentSize(148vh, 100%);
   box-sizing: border-box;
 
