--- a/src/component/profilePage.scss
+++ b/src/component/profilePage.scss
@@ -1,6 +1,6 @@
 @import "../style.scss";
 
-.profile_page {
+.profilePage {
   @include contentSize(100vh, 100%);
   display: flex;
   flex-direction: column;
