--- a/src/style.scss
+++ b/src/style.scss
@@ -1,24 +1,29 @@
 $brandColor: rgba(32, 145, 249, 1);
-@mixin display-prop($justContent, $alingItems, $direction) {
-  display: flex;
-  justify-content: $justContent;
-  align-items: $alingItems;
-  flex-direction: $direction;
-}
-@mixin contentSize($hgt, $wdt) {
-  height: $hgt;
-  width: $wdt;
-}
-@mixin fontProp($size, $isBold) {
-  font-size: $size;
-  font-weight: $isBold;
-}
+
 * {
   margin: 0;
   padding: 0;
   letter-spacing: 0.03em;
   font-family: sans-serif;
 }
+
+@mixin flexProp($justContent, $alignItems, $direction) {
+  display: flex;
+  justify-content: $justContent;
+  align-items: $alignItems;
+  flex-direction: $direction;
+}
+
+@mixin contentSize($hgt, $wdt) {
+  height: $hgt;
+  width: $wdt;
+}
+
+@mixin fontProp($size, $bold) {
+  font-size: $size;
+  font-weight: $bold;
+}
+
 [type="button"],
 button {
   @include contentSize(39px, 92px);
@@ -35,6 +40,7 @@ button {
     transform: scale(0.93);
   }
 }
+
 p {
   color: rgb(139, 139, 139);
 }
