--- a/src/component/pricingPage/stylesheet/planInfo.scss
+++ b/src/component/pricingPage/stylesheet/planInfo.scss
@@ -1,6 +1,6 @@
 @import "../../../style.scss";
 
-.cost_info {
+.planInfo {
   height: 115vh;
   display: flex;
   flex-direction: column;
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   gap: 22px;
 
-  .toggle_plan {
+  .togglePlan {
     height: 33px;
     margin-top: 54px;
     text-align: center;
@@ -21,6 +21,7 @@
       margin: 0;
       background: transparent;
       color: $brandColor;
+
       &:last-child {
         width: 193px;
         background: rgb(230, 230, 230);
@@ -29,7 +30,7 @@
     }
   }
 
-  .select_plan {
+  .planSelectionContainer {
     @include flexProp(space-evenly, center, row);
     height: 80%;
     gap: 16px;
@@ -40,7 +41,8 @@
       height: 90%;
       gap: 12px;
 
-      .planInfo_container {
+      .planInfoCard {
+        border: 2px solid red;
         @include flexProp(space-evenly, center, column);
         @include contentSize(413px, 21%);
         min-width: 223px;
@@ -58,7 +60,7 @@
           margin: 6px 0 6px 0;
         }
 
-        .cost_of_plan {
+        .costOfPlan {
           width: 68%;
           height: 41px;
           display: grid;
@@ -124,7 +126,7 @@
             color: $brandColor;
           }
 
-          .selected_with_white::before {
+          .selectedWithWhite::before {
             background: url("../sub_plan_info/image/standardPlanSelector.png")
               no-repeat;
             background-size: contain;
@@ -138,7 +140,7 @@
           }
         }
 
-        .plan_desc {
+        .planHeader {
           text-align: center;
 
           p {
@@ -151,11 +153,11 @@
 }
 
 @media (max-width: 785px) {
-  .cost_info {
-    .select_plan {
+  .planInfo {
+    .planSelectionContainer {
       flex-direction: column;
       .planType {
-        .planInfo_container {
+        .planInfoCard {
           width: 213px;
           min-width: 0;
         }
@@ -165,15 +167,15 @@
 }
 
 @media (max-width: 640px) {
-  .cost_info {
+  .planInfo {
     height: 285vh;
-    .select_plan {
+    .planSelectionContainer {
       flex-direction: column;
       height: 100%;
       .planType {
         height: 100%;
         flex-direction: column;
-        .planInfo_container {
+        .planInfoCard {
           width: 253px;
         }
       }
